--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -27,7 +27,7 @@
             <div class="modal-body">
                 <!--                The Input Form-->
                 <!--/*@thymesVar id="project" type=""*/-->
-                <form action="#" th:action="@{/workspace}" th:object="${project}" method = "POST">
+                <form action="#" th:action="@{/workspace}" th:object="${map}" method = "POST">
                     <div class="form-group form-inline">
                         <label>Orientation:</label>
                         <select id="orientation" style="padding-left: 10px">
