math fixed of canvas
1.fixing canvas to tiles with offset
2.css added to fit the width for tilest panel

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -116,7 +116,7 @@
             <br>
 
             <div class="row">
-                <div class="card">
+                <div class="card card1">
                     <div class="card-header">
                         <ul class="nav nav-tabs card-header-tabs" id="bologna-list" role="tablist">
                             <li class="nav-item">
@@ -127,7 +127,7 @@
                             <!--                            </li>-->
                         </ul>
                     </div>
-                    <div class="card-body" style="padding:0px!important;">
+                    <div class="card-body" style="padding:unset;">
                         <div class="tab-content mt-3">
                             <div class="tab-pane active" id="Tileset#1" role="tabpanel">
                                 <input type="file" id="realBtn" hidden="hidden" onchange="addFirstTileset(this);">
