--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -7,7 +7,7 @@
     <title>LevelCreator - Profile</title>
 </head>
 
-<body>
+<body class="profile">
 
     <header th:insert="fragments.html :: nav"></header>
 
