Updated zoom functionality.

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -78,7 +78,6 @@
         <div class="col-8 middle">
             <div class="box" id="canvasStorage" style="height:660px; width: 100%; position:relative; overflow: auto;">
                 <canvas id="canvas"></canvas>
-
             </div>
         </div>
 
@@ -188,6 +187,7 @@
     })
 </script>
 
+<script src = "js/zoom.js"></script>
 <script src="js/tabs.js"></script>
 <script src="js/addProject.js"></script>
 <script src="js/layerController.js"></script>
