fabricJs used for tile objects: Imported image is sliced to an array of imageData and converted to image object. Now able to choose tile from tileset and place on the gridCanvas as map. Tile placed at same layer ll be added to same array(but haven't decide dataformat) Now able to drag tiles on map and group select and drag tiles on map, BUT group selection from tileset still need work Tab panel is reorganized for loop reloading purpose

--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -55,7 +55,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" onclick="createJson()">Create Map</button>
+                        <button type="submit" class="btn btn-primary" onclick="createMap()">Create Map</button>
                     </div>
                 </form>
 
@@ -64,9 +64,8 @@
     </div>
 </div>
 
-<!-- Optional JavaScript -->
-<script src="js/addProject.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -76,6 +75,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+<!-- Optional JavaScript -->
+<!--<script src="js/addProject.js"></script>-->
+<script src="js/fabricCreateMap.js"></script>
 
 </body>
 </html>
