--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -9,6 +9,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
     <title>Title</title>
+
 </head>
 <body>
 
@@ -76,8 +77,8 @@
         </div>
 
         <div class="col-8 middle">
-            <div class="box" id="canvasStorage" style="height:660px; width: 100%; position:relative; overflow: auto;">
-                <canvas id="canvas"></canvas>
+            <div class="box" id="canvasStorage" style="height:100%; width: 100%; position:relative; overflow: auto; background-color: gray;">
+                <canvas id = "grid_canvas"></canvas>
             </div>
         </div>
 
@@ -104,8 +105,7 @@
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                             <button class="dropdown-item" type="button" onclick="newTileLayer()">Tile Layer</button>
-                            <button class="dropdown-item" type="button" onclick="newObjectLayer()">Object layer
-                            </button>
+                            <button class="dropdown-item" type="button" onclick="newObjectLayer()">Object layer</button>
                         </div>
 
                         <i class="fas fa-minus layerIcon" onclick="deleteLayer()"></i>
@@ -117,41 +117,38 @@
             <div class="row">
                 <div class="card card1">
                     <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs" id="bologna-list" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link active" id="tileset1" href="#Tileset#1" role="tab">Tileset#1</a>
-                            </li>
-                            <!--                            <li class="nav-item">-->
-                            <!--                                <a class="nav-link"  href="#history" role="tab" aria-controls="history" aria-selected="false">Tileset#2</a>-->
-                            <!--                            </li>-->
+                        <ul class="nav nav-tabs card-header-tabs" role="tablist">
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link active" id="tileset1" href="#Tileset#1" data-toggle="tab">Tileset#1</a>-->
+<!--                            </li>-->
                         </ul>
                     </div>
-                    <div class="card-body" style="padding:unset;">
+                    <div class="card-body" style="padding:unset;min-height: 256px;">
                         <div class="tab-content mt-3">
-                            <div class="tab-pane active" id="Tileset#1" role="tabpanel">
-                                <input type="file" id="realBtn" hidden="hidden" onchange="addFirstTileset(this);">
-                                <button type="button" id="fakeBtn" class="btn btn-secondary btn-lg btn-block"> Import
-                                    Tileset
-                                </button>
-                                <canvas id="myCanvas">this is canvas</canvas>
-                            </div>
-                            <!--                            <div class="tab-pane" id="history" role="tabpanel" aria-labelledby="history-tab" style="overflow: scroll;max-height:256px;">-->
-                            <!--                                <canvas id="myCanvas2" >this is canvas</canvas>-->
-                            <!--                            </div>-->
+<!--                            <div class="tab-pane active" id="Tileset#1" role="tabpanel">-->
+<!--                                <input type="file" id="realBtn" hidden="hidden" onchange="addFirstTileset(this);">-->
+<!--                                <button type="button" id="fakeBtn" class="btn btn-secondary btn-lg btn-block"> Import-->
+<!--                                    Tileset-->
+<!--                                </button>-->
+<!--                                <canvas id="canvas_1">this is canvas</canvas>-->
+<!--                            </div>-->
                         </div>
                     </div>
                     <div class="card-footer text-muted">
-                        <input type="file" id="fileBtn" hidden="hidden" onchange="addTileset(this);">
+<!--                        wanna make these in one line-->
+                        <h5>Tilesets</h5>
+                        <input type="file" id="fileBtn" hidden="hidden" onclick="this.value = null" onchange="addTileset(this);">
                         <a href="#" class="remove-tileset" id="minusBtn"><span class="fas fa-minus"
                                                                                style="float:right;margin-right:5px;margin-top: 5px;"></span></a>
                         <a href="#" class="add-tileset" id="plusBtn"><span class="fas fa-plus"
                                                                            style="float:right;margin-right:20px; margin-top: 5px;"></span></a>
+
                     </div>
                 </div>
-
             </div>
-
         </div>
+
+
     </div>
 </div>
 
@@ -169,15 +166,16 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"></script>
 
 <!-- Optional JavaScript-->
-<script type="text/javascript">
-    const realFileBtn = document.getElementById("realBtn");
-    const fakeFileBtn = document.getElementById("fakeBtn");
-    fakeFileBtn.addEventListener("click", function () {
-        realFileBtn.click();
-    })
-</script>
+<!--<script type="text/javascript">-->
+<!--    const realFileBtn = document.getElementById("realBtn");-->
+<!--    const fakeFileBtn = document.getElementById("fakeBtn");-->
+<!--    fakeFileBtn.addEventListener("click", function () {-->
+<!--        realFileBtn.click();-->
+<!--    })-->
+<!--</script>-->
 
 <script type="text/javascript">
     const fileBtn = document.getElementById("fileBtn");
@@ -187,12 +185,16 @@
     })
 </script>
 
-<script src = "js/zoom.js"></script>
+<!--<script src = "js/zoom.js"></script>-->
 <script src="js/tabs.js"></script>
-<script src="js/addProject.js"></script>
-<script src="js/layerController.js"></script>
-<script src="js/addTileset.js"></script>
-<script src="js/tileSelection.js"></script>
+<!--<script src="js/addProject.js"></script>-->
+<script src = "js/fabricNumberedImage.js"></script>
+<script src="js/fabricCreateMap.js"></script>
+<script src="js/fabricLayerController.js"></script>
+<!--<script src="js/layerController.js"></script>-->
+<script src="js/fabricTilesetController.js"></script>
+<script src="js/fabricTileStamp.js"></script>
+<!--<script src="js/tileSelection.js"></script>-->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
 </body>
