--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -85,8 +85,8 @@
         <div class="col-2 panels">
             <div class="row">
                 <div class="card card1">
-                    <div class="card-header">
-                        <center>Layers</center>
+                    <div class="card-header text-center">
+                        <h5>Layers</h5>
                     </div>
 
                     <div style="height: 300px; overflow: auto">
@@ -134,14 +134,13 @@
 <!--                            </div>-->
                         </div>
                     </div>
-                    <div class="card-footer text-muted">
+                    <div class="card-footer form-inline">
 <!--                        wanna make these in one line-->
-                        <h5>Tilesets</h5>
+                        <h5 class = "my-1 mr-lg-5">Tilesets</h5>
+                        <h5 class = "my-1 ml-lg-5 mr-lg-5"></h5>
                         <input type="file" id="fileBtn" hidden="hidden" onclick="this.value = null" onchange="addTileset(this);">
-                        <a href="#" class="remove-tileset" id="minusBtn"><span class="fas fa-minus"
-                                                                               style="float:right;margin-right:5px;margin-top: 5px;"></span></a>
-                        <a href="#" class="add-tileset" id="plusBtn"><span class="fas fa-plus"
-                                                                           style="float:right;margin-right:20px; margin-top: 5px;"></span></a>
+                        <a href="#" class="add-tileset float-right my-1 ml-lg-5" id="plusBtn"><span class="fas fa-plus"></span></a>
+                        <a href="#" class="remove-tileset float-right my-1 ml-4" id="minusBtn"><span class="fas fa-minus"></span></a>
 
                     </div>
                 </div>
