set id of tiles to layer id for movement tracking

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -137,7 +137,7 @@
                     <div class="card-footer form-inline">
 <!--                        wanna make these in one line-->
                         <h5 class = "my-1 mr-lg-5">Tilesets</h5>
-                        <h5 class = "my-1 ml-lg-5 mr-lg-5"></h5>
+<!--                        <h5 class = "my-1 ml-lg-5 mr-lg-5"></h5>-->
                         <input type="file" id="fileBtn" hidden="hidden" onclick="this.value = null" onchange="addTileset(this);">
                         <a href="#" class="add-tileset float-right my-1 ml-lg-5" id="plusBtn"><span class="fas fa-plus"></span></a>
                         <a href="#" class="remove-tileset float-right my-1 ml-4" id="minusBtn"><span class="fas fa-minus"></span></a>
