--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -55,7 +55,7 @@
                     <i class="fas fa-object-group icon"></i>
                 </div>
                 <div class="col">
-                    <i class="fas fa-eraser icon"></i>
+                    <a href="#" id="eraseBtn" onclick="eraseTile()"><i class="fas fa-eraser icon"></i></a>
                 </div>
             </div>
             <div class="row iconrow">
