all "project" is replaced by "map" in layerController select tool is enabled for selecting tile on map right now

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -52,7 +52,7 @@
             </div>
             <div class="row iconrow">
                 <div class="col">
-                    <i class="fas fa-object-group icon"></i>
+                    <a href="#" id="selectBtn" onclick="clearUrl()"><i class="fas fa-object-group icon"></i></a>
                 </div>
                 <div class="col">
                     <a href="#" id="eraseBtn" onclick="eraseTile()"><i class="fas fa-eraser icon"></i></a>
@@ -189,8 +189,8 @@
 <!--<script src="js/addProject.js"></script>-->
 <script src = "js/fabricNumberedImage.js"></script>
 <script src="js/fabricCreateMap.js"></script>
+<script src="js/layerController.js"></script>
 <script src="js/fabricLayerController.js"></script>
-<!--<script src="js/layerController.js"></script>-->
 <script src="js/fabricTilesetController.js"></script>
 <script src="js/fabricTileStamp.js"></script>
 <!--<script src="js/tileSelection.js"></script>-->
