--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -23,9 +23,27 @@
                     <i class="fas fa-save icon"></i>
                 </div>
                 <div class="col">
-                    <i class="fas fa-file-import icon"></i>
+                   <i class="fas fa-file-import icon"></i>
                 </div>
             </div>
+            <!--            this is test icons-->
+            <div class="row iconrow">
+                <div class="col">
+                    <a href="#" id="upBtn" onclick="lockLayer(curLayerSelected)"><i class="fas fa-lock icon"></i></a>
+                </div>
+                <div class="col">
+                    <a href="#" id="downBtn" onclick="unlockLayer(curLayerSelected)"><i class="fas fa-lock-open icon"></i></a>
+                </div>
+            </div>
+            <div class="row iconrow">
+                <div class="col">
+                    <a href="#" id="trasBtn" onclick="makeLayerInvisible(curLayerSelected)"><i class="fas fa-eye-slash icon"></i></a>
+                </div>
+                <div class="col">
+                    <a href="#" id="noTrasBtn" onclick="makeLayerVisible(curLayerSelected)"><i class="fas fa-eye icon"></i></a>
+                </div>
+            </div>
+            <!--            this is test icons-->
             <div class="row iconrow">
                 <div class="col">
                     <i class="fas fa-undo icon"></i>
@@ -189,8 +207,8 @@
 <!--<script src="js/addProject.js"></script>-->
 <script src = "js/fabricNumberedImage.js"></script>
 <script src="js/fabricCreateMap.js"></script>
-<script src="js/layerController.js"></script>
 <script src="js/fabricLayerController.js"></script>
+<script src="js/layerController.js"></script>
 <script src="js/fabricTilesetController.js"></script>
 <script src="js/fabricTileStamp.js"></script>
 <!--<script src="js/tileSelection.js"></script>-->
