configuring literally canvas
now can use literally canvas!

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -79,7 +79,7 @@
             </div>
             <div class="row iconrow">
                 <div class="col">
-                    <i class="fas fa-edit icon"></i>
+                    <a href="/customizeTileset" id="drawBtn"><i class="fas fa-edit icon"></i></a>
                 </div>
                 <div class="col">
                     <i class="fas fa-users icon"></i>
