group selection from tileset is available now still need to work on replacing existing tile at group stamping going to start working on copy & paste erase is now only to current layer layer arrangement still need work, can bringToFront but can not bringForward

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -7,7 +7,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
     <title>Title</title>
 </head>
 <body>
@@ -114,9 +113,9 @@
 
                     </div>
                     <div class="card-footer text-muted">
-                        <i class="fas fa-arrow-down layerIcon"></i>
+                        <a href="#" id="downBtn"><i class="fas fa-arrow-down layerIcon"></i></a>
 
-                        <i class="fas fa-arrow-up layerIcon"></i>
+                        <a href="#" id="upBtn"><i class="fas fa-arrow-up layerIcon"></i></a>
 
                         <i class=" fas fa-plus dropdown-toggle layerIcon" id="dropdownMenu2" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false"></i>
