--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,8 +21,8 @@
     <link th:href="@{/css/freelancer.min.css}" rel="stylesheet">
     <link th:href="@{/css/style.css}" rel="stylesheet">
     <!--    literally canvas css and js-->
-    <link th:href="@{/css/literallycanvas.css}" rel="stylesheet">
-    <script src="js/literallycanvas.js"></script>
+<!--    <link th:href="@{/css/literallycanvas.css}" rel="stylesheet">-->
+<!--    <script src="js/literallycanvas.js"></script>-->
     <!--    <link th:href="@{/css/style_1.css}" rel="stylesheet">-->
 </head>
 
